# android_dmp_viewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: msbuild.yml
imgui/: imgui.vcxproj  imgui.vcxproj.filters
imgui/backends/: imgui_impl_win32.cpp
imgui/examples/example_glut_opengl2/: example_glut_opengl2.vcxproj
include/: xini_file.h
src/: android_dmp_viewer.cpp  file_system_helper.cpp  file_system_helper.h  main_view.cpp  main_view.h  stack_reader.cpp  stack_reader.h
